# fishy-business

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  .readthedocs.yaml  Dockerfile  Fish_2.ipynb  Genetic_Program.ipynb  LICENSE  MANIFEST.in  Multi_tree_Genetic_Program.ipynb  PCA.ipynb  Part.ipynb  README.md  all_modules.txt  analyze_augformer_vs_gatedmlp.py  analyze_deepseek_significance.py  analyze_ema_statistical.py  analyze_muon_significance.py  analyze_results.py  analyze_xsa.py  check_missing_results.py  check_results_robust.py  clean_csv_to_exact_1920.py  coverage_analysis.txt  coverage_analysis_v2.txt  coverage_analysis_v3.txt  coverage_part1.txt  coverage_part2.txt  depth  doc_modules.txt  export_wandb_oil.py  hyperparameter_sweep.py  main.py  modules_docs.txt  modules_fs.txt  output_instructions.md  package-lock.json  pyproject.toml  requirements.txt  (+17 more)
analysis_results/: analyze_augformer_vs_gatedmlp.py  analyze_ensemble_versus.py  analyze_results.py  analyze_xsa.py  create_results_db.py  results.db
code/: README.md  __init__.py  optimize_contrastive_simclr_cnn.py  optimize_contrastive_simclr_kan.py  optimize_contrastive_simclr_lstm.py  optimize_contrastive_simclr_rcnn.py  optimize_contrastive_simclr_transformer.py  run_experiments.sh  run_failed_experiments.sh  run_ordinal_experiments.sh  run_simclr_experiments.sh  visualize_embeddings.py
code/siamese/: CMakeLists.txt  MOE.py  README.md  SimCLR.py  best_model.pth  best_vae_model.pth  cnn.py  dense.py  gp.cpp  gp.py  gp_vector.py  grid.sh  kan.py  loss.py  lstm.py  main.py  mamba.py  ode.py  out  plot.py  rcnn.py  run.sh  rwkv.py  siamese.py  tcn.py  train.py  transformer.py  util.py  vae.py  wavenet.py
code/siamese/dev/: .nfs0000000529965ace00000029  .nfs000000052a1809de0000002c  CMakeCache.txt  Makefile  app  cmake_install.cmake  gp_timing.csv
code/siamese/dev/OpenXLSX/: Makefile  cmake_install.cmake
code/siamese/dev/OpenXLSX/OpenXLSX/: OpenXLSXTargets.cmake
dashboard/: app.py
data/: REIMS_data.xlsx
docs/: README.md  generate_leaderboard_docs.py  requirements.txt
examples/: 01_getting_started.py  01_programmatic_training.py  02_data_module.py  02_data_module_exploration.py  03_configuration.py  03_low_level_trainer.py  04_pretraining_and_transfer.py  04_training_engines.py  05_run_all_benchmarks.py  06_pretraining.py  07_transfer_learning.py  08_probabilistic_inference.py  09_outputs_and_visualization.py  README.md
fishy/: __init__.py  __main__.py
literature/: Literature.md
notebooks/: 01_Datasets_and_Preprocessing.ipynb  01_getting_started.ipynb  02_Species_and_Part_Identification.ipynb  03_Oil_and_CrossSpecies_Adulteration.ipynb  04_Contrastive_Learning_for_Batch_Detection.ipynb  README.md
paper/: README.md  paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  readme.txt  refs.bib
paper-final/: paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  refs.bib  samplepaper.aux  samplepaper.fdb_latexmk  samplepaper.fls  samplepaper.tex
papers/: README.md
proposal/: README.md  VUW_Standard_Landscape_BLACK.eps  paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  proj_proposal.aux  proj_proposal.blg  proj_proposal.fdb_latexmk  proj_proposal.fls  (+3 more)
(+1102 files in other folders)
