[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fishy-business"
version = "0.1.0"
description = "A configuration-driven framework for spectral data analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Jesse Wood", email = "jesse.wood@ecs.vuw.ac.nz" }
]
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "matplotlib",
    "seaborn",
    "torchdiffeq",
    "openpyxl",
    "lime",
    "deap",
    "xgboost",
    "wandb",
    "pyyaml",
    "pytest",
    "pyopls",
    "argcomplete",
    "rich",
    "streamlit",
    "plotly",
    "umap-learn",
    "paramiko"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fishy*"]
