[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fishy-business"
version = "0.1.0"
description = "A configuration-driven framework for spectral data analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Jesse Wood", email = "jesse.wood@ecs.vuw.ac.nz" }
]
dependencies = [
    "torch>=1.11.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "torchdiffeq>=0.2.0",
    "openpyxl>=3.0.0",
    "lime>=0.2.0",
    "deap>=1.3.0",
    "xgboost>=1.5.0",
    "wandb>=0.12.0",
    "pyyaml>=6.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pyopls>=2021.12.14",
    "argcomplete>=2.0.0",
    "rich>=11.0.0",
    "streamlit>=1.10.0",
    "plotly>=5.6.0",
    "umap-learn>=0.5.0",
    "paramiko>=2.10.0",
    "urllib3<2.0",
    "ipywidgets>=7.7.0"
]

[project.scripts]
fishy = "fishy.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fishy*"]
